5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4070/executions/1643_2703.log
== SUBMITION (2019-04-10 19:13:10) 
-- CODE:
ida = int(imput("idade:"))

if (int > 18):
	mensagem = "eleitor"

else:
	mensagem = "nao_eleitor"
	
print(mensagem)
-- EXECUTION TIME:
0.21462
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2703/main.py", line 1, in <module>
    ida = int(imput("idade:"))
NameError: name 'imput' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:13:23) 
-- CODE:
ida = int(imput("idade:"))

if (int > 18):
	mensagem = "eleitor"

else:
	mensagem = "nao_eleitor"
	
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ida = int(imput("idade:"))
NameError: name 'imput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 19:13:53) 
-- CODE:
ida = int(input("idade:"))

if (int > 18):
	mensagem = "eleitor"

else:
	mensagem = "nao_eleitor"
	
print(mensagem)
-- EXECUTION TIME:
0.128288
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2703/main.py", line 3, in <module>
    if (int > 18):
TypeError: unorderable types: type() > int()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 19:14:58) 
-- CODE:
ida = int(input("idade:"))

if (int >= 18):
	mensagem = "eleitor"

else:
	mensagem = "nao_eleitor"
	
print(mensagem)
-- EXECUTION TIME:
0.183974
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2703/main.py", line 3, in <module>
    if (int >= 18):
TypeError: unorderable types: type() >= int()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:15:03) 
-- CODE:
ida = int(input("idade:"))

if (int >= 18):
	mensagem = "eleitor"

else:
	mensagem = "nao_eleitor"
	
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (int >= 18):
TypeError: '>=' not supported between instances of 'type' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 19:15:09) 
-- CODE:
ida = int(input("idade:"))

if (int >= 18):
	mensagem = "eleitor"

else:
	mensagem = "nao_eleitor"
	
print(mensagem)
-- EXECUTION TIME:
0.254436
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2703/main.py", line 3, in <module>
    if (int >= 18):
TypeError: unorderable types: type() >= int()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 19:15:39) 
-- CODE:
ida = int(input("idade:"))

if (ida >= 18):
	mensagem = "eleitor"

else:
	mensagem = "nao_eleitor"
	
print(mensagem)
-- EXECUTION TIME:
0.194824
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
